tests/spec/non_conformant/errors/fn_varargs/at_start.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/fn-varargs/at-start.hrx"

// Ignoring "test", error tests are not supported yet.
